// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GifsContainer > should render the GifsContainer component 1`] = `
<div>
  <div
    class="mt-8 grid w-full max-w-6xl grid-cols-2 gap-3 sm:mt-10 sm:grid-cols-3 sm:gap-4"
  />
</div>
`;

exports[`GifsContainer > shuld render the GifsContainer component 1`] = `
<div>
  <div
    class="mt-8 grid w-full max-w-6xl grid-cols-2 gap-3 sm:mt-10 sm:grid-cols-3 sm:gap-4"
  />
</div>
`;

exports[`PreviousSearchedGifs > should render the PreviousSearchedGifs component 1`] = `
<div>
  <div
    class="mt-5 border-t border-white/10 pt-4"
  >
    <p
      class="mb-3 text-[0.65rem] font-bold uppercase tracking-[0.2em] text-slate-500"
    >
      Recent searches
    </p>
    <ul
      class="m-0 flex max-w-full list-none flex-wrap gap-2 p-0"
    />
  </div>
</div>
`;
